--- a/Raspberry/WebSite/index.html
+++ b/Raspberry/WebSite/index.html
@@ -4,29 +4,29 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="stylesheet" href="style.css" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Taine Yoni" />
     <title>Latest Data from Database</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Latest Data from Database</h1>
-    <table id="data-table">
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Time</th>
-          <th>TDS</th>
-          <th>pH</th>
-          <th>Oxygen</th>
-          <th>Conductivity</th>
-          <th>Temp</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div class="container mt-5">
+      <h1 class="text-center mb-4">Latest Data from Database</h1>
+      <div id="data-cards" class="row"></div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="script.js"></script>
   </body>
-  <script src="script.js"></script>
 </html>
