--- a/Raspberry/WebSite/index.html
+++ b/Raspberry/WebSite/index.html
@@ -8,25 +8,31 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Taine Yoni" />
-    <title>Latest Data from Database</title>
+    <title>Dernières données</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container mt-5">
-      <h1 class="text-center mb-4">Latest Data from Database</h1>
-      <div id="data-cards" class="row"></div>
+      <h1 class="text-center mb-4">Dernières données de la base</h1>
+      <div class="row justify-content-center">
+        <div class="col-md-6 text-center">
+          <div
+            class="d-inline-block rounded-circle p-3"
+            style="background: linear-gradient(135deg, #4facfe, #00f2fe)"
+          >
+            <h2 class="text-white">Qualité de l'eau</h2>
+            <p class="text-white">Normal</p>
+          </div>
+        </div>
+      </div>
+      <div id="data-cards" class="row mt-5"></div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
