--- a/Raspberry/WebSite/index.html
+++ b/Raspberry/WebSite/index.html
@@ -18,18 +18,9 @@
   <body>
     <div class="container mt-5">
       <h1 class="text-center mb-4">Dernières données de la base</h1>
-      <div class="row justify-content-center">
-        <div class="col-md-6 text-center">
-          <div
-            class="d-inline-block rounded-circle p-3"
-            style="background: linear-gradient(135deg, #4facfe, #00f2fe)"
-          >
-            <h2 class="text-white">Qualité de l'eau</h2>
-            <p class="text-white">Normal</p>
-          </div>
-        </div>
+      <div class="row justify-content-start">
+        <div id="data-cards" class="col-auto"></div>
       </div>
-      <div id="data-cards" class="row mt-5"></div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
