--- a/Raspberry/Website/index.html
+++ b/Raspberry/Website/index.html
@@ -8,22 +8,34 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="author" content="Taine Yoni" />
-    <title>Dernières données</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
+    <title>Dashboard</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="assets/logo_fav.png" type="icon" />
   </head>
   <body>
-    <div class="container mt-5">
-      <h1 class="text-center mb-4">Dernières données de la base</h1>
-      <div class="row justify-content-start">
-        <div id="data-cards" class="col-auto"></div>
+    <!-- Barre de navigation -->
+    <nav class="navbar">
+      <div class="logo">
+        <a href="index.html"><img src="assets/logo.jpg" alt="Logo" /></a>
+      </div>
+      <ul class="nav-links">
+        <li><a href="#">À propos</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
+    <!-- Fond avec informations et indicateur de qualité -->
+    <div class="background">
+      <div class="info-container" id="info-container"></div>
+
+      <div id="quality" class="quality-container">
+        <div>
+          Qualité<br />Générale
+          <span id="quality-span" class="">MOYEN</span>
+        </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="script.js"></script>
   </body>
 </html>
